--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,20 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Homepage</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=DM+Sans&family=Noto+Serif&display=swap');
+    </style>
 </head>
 <body>
+    <div>
+        <h1 id="helloThere">Hello There!</h1>
+        <h1 id="part2">All the answers lie in the stars...</h1>
+    </div>
+    <div  class="pages">
+        <span class="star"></span>
+    </div>
 
+    <div class="clouds"></div>
 </body>
 <script>
 
@@ -30,7 +41,6 @@
     function randomIntBetweenInterval(min, max) { // min and max included
         return Math.floor(Math.random() * (max - min + 1) + min)
     }
-
 
 </script>
 </html>
